# envguard

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  envguard.py  install.ps1  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-01-curl-installers-ai-detection.md  2026-06-01-simple-installer-wizard.md
docs/superpowers/specs/: 2026-06-01-simple-installer-wizard-design.md
skills/envguard/: SKILL.md
tests/: test_envguard.py  test_installers.py
