[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envguard"
version = "1.0.0"
description = "Environment variable dead-key detector with Supabase Edge Functions support"
readme = "README.md"
license = "MIT"
authors = [
    { name = "envguard contributors" },
]
requires-python = ">=3.9"
keywords = ["env", "environment-variables", "supabase", "cli", "lint"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "ruff>=0.4.0",
    "twine>=5.0",
]

[project.scripts]
envguard = "envguard:main"

[tool.setuptools]
py-modules = ["envguard"]

[tool.envguard]
# Default behavior: scan current directory, compare with .env.example

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --tb=short"
pythonpath = ["."]
testpaths = ["tests"]
